# mirQAt

./: README.md  pyproject.toml  speedup.ipynb  speedup_clean.ipynb
mirqat/: main.py
mirqat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_mirqat.py
