[tool.poetry]
name = "mirQAt"
version = "0.1.0"
description = ""
authors = ["Mirza Khan <mirzask@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mirQAt = "mirqat.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.2.1"}
pandas = "^1.0.4"
pydicom = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
